remove adding of the UMLift-maven-plugin to the generated POM